# sat-o-mat

./: Cargo.toml  README.md
examples/: config.yml  upload_schedule.py
examples/schedules/: basic.yml
examples/tle/: iss.txt  nanoff_a.txt  nanoff_b.txt
frontend/src/api/: templates.ts
frontend/src/components/SatellitePasses/: PolarPlotDialog.tsx  SatellitePasses.module.css
frontend/src/components/TaskModal/: TaskModal.module.css  TaskModal.tsx
frontend/src/components/Timeline/: TaskTimeline.tsx
frontend/src/screens/Dashboard/: Dashboard.tsx
src/: abort.rs  main.rs
src/executor/: README.md  mod.rs  process.rs
src/predict/: error.rs  ground_station.rs  mod.rs  pass_finder.rs  propagation.rs  sample.rs  tle_loader.rs  types.rs
src/radio/: README.md  mod.rs
src/scheduler/: README.md  approval.rs  artifacts.rs  mod.rs  parser.rs  runner.rs  storage.rs  utils.rs
src/tracker/: README.md  error.rs  ground_station.rs  mod.rs  parsing.rs  sample.rs  tracker.rs  trajectory.rs  types.rs
src/web/: api_doc.rs  auth.rs  config.rs  handlers.rs  mod.rs  server.rs
src/web/api/: error.rs  mod.rs  predict.rs  schedules.rs  tracker.rs
src/web/static/js/: dashboard.js  editor.js  timeline.js
src/web/static/js/alpine/: app.js
src/web/static/js/alpine/components/: editor.js  modal.js  timeline.js
src/web/static/js/alpine/stores/: auth.js  predictions.js  schedules.js  tracker.js
src/web/static/js/alpine/utils/: datetime.js
src/web/templates/: base.html  dashboard.html  timeline.html
src/web/templates/partials/: fft_widget.html  radio_controls.html  radio_widget.html  rotator_widget.html  schedule_editor.html  schedule_editor_content.html  schedule_timeline.html  timeline_chart.html  timeline_content.html  timeline_list.html  tracker_controls.html  widget_header.html
src/web/templates/partials/modals/: api_key.html  pass_modal.html  schedule_detail.html  schedule_editor.html  schedule_modal.html  tracker_modal.html
src/web/ui/: handlers.rs  mod.rs  templates.rs
