[package]
name = "sat-o-mat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
strum_macros = "0.27.2"
log = "0.4.29"
env_logger = "0.11.8"
