[package]
name = "sat-o-mat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
strum_macros = "0.27.2"
log = "0.4.29"
env_logger = "0.11.8"
sgp4 = "2.3"

# Web server
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Templating
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
uuid = { version = "1", features = ["v4"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
