[package]
name = "sat-o-mat"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
humantime = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "fs", "sync", "net", "io-std", "io-util"] }
tracing = "0.1"
libc = "0.2"
notify = "8.2.0"
clap = { version = "4.5", features = ["derive"] }
cross-xdg = "2.1.0"
anyhow = "1.0.102"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
axum = "0.8.8"
rust-embed = "8"
mime_guess = "2"
sgp4 = "2.4.0"
lox-space = "0.1.0-alpha.37"
serde_json = "1.0.149"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tracing-test = "0.2.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "predict_passes"
harness = false
